<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/purple_200"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="18dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view"
            android:layout_width="68dp"
            android:layout_height="77dp"
            android:layout_marginTop="20dp"

            android:src="@mipmap/ic_launcher">

        </de.hdodenhof.circleimageview.CircleImageView>

        <LinearLayout
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_id"
                android:layout_width="142dp"
                android:layout_height="wrap_content"



                android:layout_marginTop="10dp"
                android:text="@string/emp_id"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:text="@string/emp_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginTop="5dp"
                android:text="@string/emp_address"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_mobileNo"
                android:layout_width="148dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/emp_mobile_no"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/txt_salary_custom"
                android:layout_width="215dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/salary"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>